finished base project one bug to fix

--- a/index.html
+++ b/index.html
@@ -10,21 +10,21 @@
             <h1>We are the Champions</h1>
             
             <div id="publish-area">
-                <textarea type="text" id="endorsement-input" content="Write your endorsement here"></textarea>
+                <textarea type="text" id="endorsement-input" placeholder="Write your endorsement here"></textarea>
                 <button id="publish-btn">Publish</button>
             </div>
             <h2>- Endorsements -</h2>
 
-            <div id="endorsements-field">
-                <div class="endorsement-element">TO jest jakis text</div>
-                <div class="endorsement-element">TO jest jakis inny text</div>
+            <ul id="endorsements-area">
+                <li class="endorsement-element">TO jest jakis text</li>
+                <li class="endorsement-element">TO jest jakis inny text</li>
 
-            </div>
+            </ul>
 
 
         </div>
 
 
-        <script src="index.js"></script>
+        <script src="index.js" type="module"></script>
     </body>
 </html>
