start to solve stretch goals

--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@
             <h1>We are the Champions</h1>
             
             <div id="publish-area">
-                <textarea type="text" id="endorsement-input" placeholder="Write your endorsement here"></textarea>
+                <textarea class="input-element" id="endorsement-input" placeholder="Write your endorsement here"></textarea>
+                <div id="from-to-area">
+                    <input type="text" class="input-element" id="from-input" placeholder="From">
+                    <input type="text" class="input-element" id="to-input" placeholder="To">
+                </div>
                 <button id="publish-btn">Publish</button>
             </div>
             <h2>- Endorsements -</h2>
 
             <ul id="endorsements-area">
-                <li class="endorsement-element">TO jest jakis text</li>
-                <li class="endorsement-element">TO jest jakis inny text</li>
-
             </ul>
-
 
         </div>
 
