--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
     <head><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
         <title>We are the Champions</title>
         <link rel="stylesheet" href="index.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@200;400;700;800&family=Josefin+Sans&display=swap" rel="stylesheet">
     </head>
     <body>
         <div id="container">
